# BuildConan

./: .gitignore  LICENSE  README.md  pylintrc  setup.cfg
src/BuildConan/: conan.py  main.py
src/LipoConan/: __init__.py  conan.py  main.py
