[metadata]
name = BuildConan
version = 1.1.12
description = Tool to simply building with Conan

[options]
include_package_data = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
test = pylint

[options.entry_points]
console_scripts =
    BuildConan = BuildConan.main:run
    conan-lipo = LipoConan.main:run
